# match_wire

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cli.rs  command_scheme.rs  json_data.rs  lib.rs  location_api_key.rs.template  main.rs  server_data.rs  subscriber.rs
src/commands/: filter.rs  handler.rs  launch.rs  launch_h2m.rs  mod.rs  reconnect.rs  settings.rs
src/commands/filter/: mod.rs  ops.rs  strategies.rs
src/commands/handler/: mod.rs  status.rs
src/commands/launch/: connection.rs  ffi.rs  mod.rs
src/models/: cli.rs  command_scheme.rs  json_data.rs
src/utils/: caching.rs  details.rs  display.rs  global_state.rs  input_line.rs  json_data.rs  limiter.rs  main_thread_state.rs  subscriber.rs
src/utils/display/: indicator.rs  mod.rs  table.rs
src/utils/input/: completion.rs  line.rs  style.rs
src/utils/request/: crypto.rs  mod.rs
tests/: display.rs  mod.rs  parsing.rs
