[package]
name = "match_wire"
version = "0.6.0"
authors = ["WardLordRuby"]
description = """
MatchWire enhances the core H2M/HMW experience by offering key quality-of-life improvements.
Featuring a robust Server Scraper with extensive filtering options. Additionally, MatchWire
makes it simple to reconnect to previously joined servers, streamlining your gameplay experience.
Created by: WardLordRuby <@7thWardLord Discord>"""
edition = "2021"

[package.metadata.winresource]
ProductName = "MatchWire"
FileDescription = "H2M-mod launcher"
ProductVersion = "0.6.0"

[profile.release]
strip = true
lto = true

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.131"
serde_json_path = "0.7.2"
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.41.0", features = ["macros", "signal"] }
tokio-stream = "0.1.16"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
winpty-rs = "0.4.0"
windows-sys = { version = "0.59.0", features = ["Win32_Storage", "Win32_Storage_FileSystem", "Win32_UI" , "Win32_UI_WindowsAndMessaging"] }
regex = "1.11.1"
sha2 = "0.10.8"
constcat = "0.6.0"
repl-oxide = { git = "https://github.com/WardLordRuby/repl-oxide", features = ["macros"] }

[build-dependencies]
winresource = "0.1.17"
